name:                adventofcode
version:             0.1.0.0
homepage:            https://github.com/alllex/adventofcode#readme
license:             BSD3
author:              Aleksei Semin
maintainer:          alllexsm@gmail.com
copyright:           2018 Aleksei Semin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils, 
                       Day1, Day2, Day3, Day4, Day5, 
                       Day6, Day7, Day8, Day9, Day10, 
                       Day11, Day12, Day13, Day14, Day15,
                       Day16, Day17, Day18, Day19, Day20
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       containers >= 0.5 && < 1,
                       data-stringmap >= 1.0 && < 2,
                       split >= 0.2 && < 1,
                       vector >= 0.12 && < 1,
                       template-haskell >= 2.12 && < 2.13,
                       regex >= 1 && < 2,
                       regex-with-pcre >= 1 && < 2
